# raincoat

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  coverage.xml  data.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml  renovate.json5
.github/workflows/: ci.yml  publish.yml
acceptance_tests/: test_full_chain.py
acceptance_tests/test_project/: __init__.py
docs/: Makefile  conf.py  discussions.rst  glossary.rst  howto_index.rst  index.rst  installation.rst  make.bat  modules.rst  quickstart.rst  reference.rst  usage.rst
docs/howto/: example.rst
htmlcov/: class_index.html  d_e437e2a03cfe4a42___init___py.html  d_e437e2a03cfe4a42___main___py.html  d_e437e2a03cfe4a42_cli_py.html  d_e437e2a03cfe4a42_color_py.html  d_e437e2a03cfe4a42_constants_py.html  d_e437e2a03cfe4a42_exceptions_py.html  d_e437e2a03cfe4a42_github_utils_py.html  d_e437e2a03cfe4a42_glue_py.html  d_e437e2a03cfe4a42_grep_py.html  d_e437e2a03cfe4a42_metadata_py.html  d_e437e2a03cfe4a42_parse_py.html  d_e437e2a03cfe4a42_source_py.html  d_e437e2a03cfe4a42_utils_py.html  d_f2ec3b22c25edd40___init___py.html  d_f2ec3b22c25edd40_django_py.html  d_f2ec3b22c25edd40_pygithub_py.html  d_f2ec3b22c25edd40_pypi_py.html  d_f2ec3b22c25edd40_python_py.html  function_index.html  index.html  status.json  z_e437e2a03cfe4a42___init___py.html  z_e437e2a03cfe4a42___main___py.html  z_e437e2a03cfe4a42_cli_py.html  z_e437e2a03cfe4a42_color_py.html  z_e437e2a03cfe4a42_constants_py.html  z_e437e2a03cfe4a42_exceptions_py.html  z_e437e2a03cfe4a42_github_utils_py.html  z_e437e2a03cfe4a42_glue_py.html  z_e437e2a03cfe4a42_grep_py.html  z_e437e2a03cfe4a42_metadata_py.html  z_e437e2a03cfe4a42_parse_py.html  z_e437e2a03cfe4a42_source_py.html  z_e437e2a03cfe4a42_utils_py.html  z_f2ec3b22c25edd40___init___py.html  z_f2ec3b22c25edd40_django_py.html  z_f2ec3b22c25edd40_pygithub_py.html  z_f2ec3b22c25edd40_pypi_py.html  z_f2ec3b22c25edd40_python_py.html
raincoat/: __init__.py  __main__.py  _acceptance_test.py  ast_utils.py  cli.py  color.py  constants.py  exceptions.py  github_utils.py  glue.py  grep.py  metadata.py  parse.py  raincoat.py  settings.py  source.py  toml.py  types.py  utils.py
raincoat/match/: __init__.py  django.py  pygithub.py  pypi.py  python.py
raincoat/plugins/: __init__.py  diff.py  source.py  updater.py  wheel_reader.py
scripts/: publish
tests/: conftest.py  parse.py  test_cli.py  test_color.py  test_django.py  test_github_utils.py  test_glue.py  test_grep.py  test_match.py  test_parse.py  test_pygithub.py  test_pypi.py  test_python.py  test_raincoat.py  test_source.py  test_utils.py
tests/acceptance/: test_full_chain.py
tests/acceptance/test_project/: __init__.py  ignored.py
tests/examples/: __init__.py
tests/integration/: test_cli.py
tests/package/1/umbrella/: __init__.py
tests/package/umbrella/: __init__.py  oneliner.py
tests/unit/: __init__.py  conftest.py  test_cli.py  test_color.py  test_django.py  test_exceptions.py  test_github_utils.py  test_glue.py  test_grep.py  test_main.py  test_match.py  test_parse.py  test_pygithub.py  test_pypi.py  test_python.py  test_source.py  test_utils.py
tests/unit/umbrella/: __init__.py
