[metadata]
name = raincoat
description = Raincoat has your code covered when you can't stay DRY.
version = 0.8.2
author=Joachim Jablon
author_email=joachim.jablon@people-doc.com
url=https://github.com/novafloss/raincoat
long_description = file: README.rst
license = MIT
keywords = code, diff, copy-paste, linter, DRY
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    sh
    requests
    pip
    click
    colorama

[options.extras_require]
dev =
    wheel
    sphinx
    tox
    zest.releaser

tests =
    pytest
    pytest-cov
    pytest-mock
    pytest_click
    pytest-catchlog
    mock
    six
    prospector[with_pyroma]

[options.packages.find]
exclude =
    tests
    acceptance_tests

[wheel]
universal = 1

[coverage:run]
omit =
    raincoat/ast_utils.py
    raincoat/_acceptance_test.py
    acceptance_tests.py
branch = True
