[metadata]
name = raincoat
description = "Raincoat has your code covered when you can't stay DRY."
version = 0.8.5
author = Joachim Jablon
author_email = joachim.jablon@people-doc.com
url = https://github.com/novafloss/raincoat
long_description = file: README.rst
license = MIT
keywords = code, diff, copy-paste, linter, DRY
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    click
    colorama
    pip
    requests
    sh
    six

[options.entry_points]
console_scripts =
	raincoat = raincoat:main
raincoat.match =
	pypi = raincoat.match.pypi:PyPIMatch
	django = raincoat.match.django:DjangoMatch
	pygithub = raincoat.match.pygithub:PyGithubMatch

[options.extras_require]
dev =
    sphinx
    tox
    wheel
    zest.releaser[recommended]

test =
    mock
    pytest
    pytest-catchlog
    pytest-cov
    pytest-mock
    pytest_click

lint =
    prospector[with_pyroma]

[options.packages.find]
exclude =
    tests
    acceptance_tests

[wheel]
universal = 1

[coverage:run]
source = raincoat
omit =
    raincoat/_acceptance_test.py
branch = True

[zest.releaser]
create-wheel = yes

[tool:pytest]
testpaths = tests

