[metadata]
name = raincoat
description =
    Raincoat has you covered when you cannot stay DRY. Linter for copy-pasted code.
author = Joachim Jablon
author_email = ewjoachim@gmail.com
url = https://github.com/ewjoachim/raincoat
project_urls =
    GitHub = https://github.com/ewjoachim/raincoat
    Documentation = https://raincoat.readthedocs.io
    Changelog = https://raincoat.readthedocs.io/en/stable/changelog.html
    Issue tracker = https://github.com/ewjoachim/raincoat/issues
long_description = file: README.rst
keywords = code, diff, copy-paste, linter, DRY
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
  setuptools_scm
install_requires =
    asttokens
    click
    colorama
    requests
    # Backport from Python 3.8
    importlib-metadata

[options.extras_require]
dev =
    tox
    black
    isort

test =
    pytest
    pytest-mock
    pytest-cov
    pytest-click

lint =
    black
    flake8
    isort
    mypy
    check-manifest

docs =
    doc8
    sphinx>=3.1.1
    sphinx_autodoc_typehints
    sphinxcontrib-programoutput

docs_spelling =
    sphinxcontrib-spelling

[options.packages.find]
include =
    raincoat
    raincoat.*

[options.entry_points]
console_scripts =
    raincoat = raincoat.cli:main
raincoat.match =
	pypi = raincoat.match.pypi:PyPIMatch
	django = raincoat.match.django:DjangoMatch
	pygithub = raincoat.match.pygithub:PyGithubMatch

[isort]
profile=black
known_first_party = raincoat

[flake8]
# This section ensures black and flake8 play nice together
max-line-length = 88
# E203: whitespace before colon on list slice: mylist[1 : 2]
extend-ignore = E203

[doc8]
max-line-length=88
ignore-path=docs/_build

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=raincoat -vv --strict-markers -rfE
testpaths =
    tests/unit
    tests/integration
    tests/acceptance

[mypy]
no_implicit_optional = True

# Add deps that mypy don't recognize here.
[importlib_metadata.*,colorama.*,asttokens.*,pip.*]
ignore_missing_imports = True

[coverage:run]
omit =
    raincoat/_acceptance_test.py


[coverage:report]
exclude_lines =
    raise NotImplementedError
    coverage: exclude
    if TYPE_CHECKING:
    [ ]+\.\.\.$
